{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 120,
  "lineage": "c1e6f393-7434-db12-601a-232b1f2480cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:network-acl/acl-0f9906b04f6d8ae35",
            "default_network_acl_id": "acl-0f9906b04f6d8ae35",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f9906b04f6d8ae35",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "147.32.98.207/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "147.32.99.76/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "636521895949",
            "subnet_ids": [],
            "tags": {
              "Name": "default_nacl"
            },
            "tags_all": {
              "Name": "default_nacl"
            },
            "vpc_id": "vpc-0243bd169b365468d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0deb682bd60185da1",
            "arn": "arn:aws:ec2:eu-central-1:636521895949:instance/i-09f91c23162d58be3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f91c23162d58be3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e4dff240c0caa71",
            "private_dns": "ip-10-123-1-113.eu-central-1.compute.internal",
            "private_ip": "10.123.1.113",
            "public_dns": "ec2-3-120-36-41.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.36.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:636521895949:key/a9c2af68-f906-44af-9067-641b0823e02e",
                "throughput": 0,
                "volume_id": "vol-08a240ce4bb46a1a7",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfd4aaa0e1f6d2ac",
            "tags": {
              "Name": "front_instance"
            },
            "tags_all": {
              "Name": "front_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2f8a3036ce70346"
            ]
          },
          "dependencies": [
            "aws_security_group.front_sg",
            "aws_subnet.front_vpc_public_subnet",
            "aws_vpc.front_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "front_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:internet-gateway/igw-0aae44dbaf1a10db7",
            "id": "igw-0aae44dbaf1a10db7",
            "owner_id": "636521895949",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0243bd169b365468d"
          },
          "dependencies": [
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aae44dbaf1a10db7",
            "id": "r-rtb-049b916771c1bc4271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049b916771c1bc427",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.front_igw",
            "aws_route_table.front_public_rt",
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "front_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:route-table/rtb-049b916771c1bc427",
            "id": "rtb-049b916771c1bc427",
            "owner_id": "636521895949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aae44dbaf1a10db7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243bd169b365468d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "front_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009fd3c10c102f1b1",
            "route_table_id": "rtb-049b916771c1bc427",
            "subnet_id": "subnet-0bfd4aaa0e1f6d2ac"
          },
          "dependencies": [
            "aws_route_table.front_public_rt",
            "aws_subnet.front_vpc_public_subnet",
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:security-group/sg-0f2f8a3036ce70346",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2f8a3036ce70346",
            "ingress": [
              {
                "cidr_blocks": [
                  "147.32.98.207/32",
                  "147.32.99.76/32"
                ],
                "description": "my ip ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "636521895949",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0243bd169b365468d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "front_vpc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:subnet/subnet-0bfd4aaa0e1f6d2ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfd4aaa0e1f6d2ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636521895949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_public_subnet"
            },
            "tags_all": {
              "Name": "dev_public_subnet"
            },
            "vpc_id": "vpc-0243bd169b365468d"
          },
          "dependencies": [
            "aws_vpc.front_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "front_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:636521895949:vpc/vpc-0243bd169b365468d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0f9906b04f6d8ae35",
            "default_route_table_id": "rtb-04c61bcbb5d408e2b",
            "default_security_group_id": "sg-0ced17930dc3eda35",
            "dhcp_options_id": "dopt-01a39682cbfbd7ec0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0243bd169b365468d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c61bcbb5d408e2b",
            "owner_id": "636521895949",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}